syntax = "proto3";

package yandex.cloud.priv.mdb.clickhouse.v1.console;

import "google/api/annotations.proto";
import "yandex/cloud/api/tools/options.proto";
import "yandex/cloud/priv/mdb/clickhouse/v1/console/cluster.proto";
import "yandex/cloud/priv/mdb/clickhouse/v1/cluster_service.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/mdb/clickhouse/v1/console;clickhouse_console";
option java_outer_classname = "PCCOS";

// A set of methods for managing ClickHouse console support.
service ClusterService {
  rpc GetClustersConfig (GetClustersConfigRequest) returns (ClustersConfig) {
    option (google.api.http) = { get: "/mdb/clickhouse/v1/console/clusters:config" };
    option (yandex.cloud.api.tools.method).lint_skip.contains_resource_name = true;
  }

  rpc EstimateCreate (CreateClusterRequest) returns (BillingEstimate) {
    option (google.api.http) = { post: "/mdb/clickhouse/v1/console/clusters:estimate" body: "*" };
  }

  rpc GetClustersStats (GetClustersStatsRequest) returns (ClustersStats) {
    option (google.api.http) = { get: "/mdb/clickhouse/v1/console/clusters:stats" };
    option (yandex.cloud.api.tools.method).lint_skip.contains_resource_name = true;
  }

  rpc GetClickhouseConfigSchema (GetClickhouseConfigSchemaRequest) returns (JSONSchema) {
    option (google.api.http) = { get: "/mdb/clickhouse/v1/console/clusters:clickhouseConfigSchema" };
  }

  rpc GetUserSettingsSchema (GetUserSettingsSchemaRequest) returns (JSONSchema) {
    option (google.api.http) = { get: "/mdb/clickhouse/v1/console/clusters:userSettingsSchema" };
  }
}

message GetClustersConfigRequest {
  // ID of the folder to get clusters config for
  string folder_id = 1;
}

message GetClustersStatsRequest {
  // ID of the folder to get clusters stats for
  string folder_id = 1;
}

message GetClickhouseConfigSchemaRequest {
}

message GetUserSettingsSchemaRequest {
}

message JSONSchema {
  string schema = 1;
}
